# dm-database-parser-sqllog

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  REALTIME_FEATURE.md  REFACTORING_PLAN.md
.github/workflows/: benchmark.yml  ci.yml  miri.yml  release.yml  update-baseline.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/phases/01-measurement/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-correctness/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-UAT.md
.planning/phases/03-hotpath/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-corealgo/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-UAT.md
.planning/phases/05-parallel/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-errorhandling/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: api_bench.rs  parse_file_bench.rs  parse_functions_bench.rs  parser_bench.rs  parser_benchmark.rs  performance_test.rs  realtime_bench.rs  record_bench.rs  record_parser_bench.rs  sqlite_bench.rs  tools_bench.rs
benchmarks/: baseline.json
docs/: BENCHMARK_API.md  COVERAGE.md  PERFORMANCE_BENCHMARK.md  README.md  TESTING.md
examples/: basic.rs  batch_export.rs  benchmark_manual.rs  debug_parsing.rs  error_messages.rs  filter_slow_queries.rs  iterator_mode.rs  parse_example.rs  parse_from_file.rs  parse_performance.rs  parse_records.rs  perf_full.rs  perf_full_test.rs  perf_record_only.rs  performance_demo.rs  realtime.rs  realtime_watch.rs  reuse_buffers.rs  show_errors.rs  simple_realtime.rs  sqlite_import.rs  sqlite_write.rs  stream_processing.rs  streaming.rs  streaming_parse.rs  using_parsers.rs  verify_parser.rs
scripts/: check-regression.sh  check_criterion_against_baseline.ps1  export_criterion_baseline.ps1  pre-push
src/: error.rs  lib.rs  matcher.rs  parser.rs  parser_config.rs  realtime.rs  record_types.rs  sqllog.rs  tools.rs
src/parser/: api.rs  constants.rs  mod.rs  parse_functions.rs  record.rs  record_parser.rs  sqllog_parser.rs  tests.rs
tests/: api.rs  api_coverage.rs  edge_cases.rs  integration_api.rs  integration_dmsql.rs  integration_four_parts.rs  integration_matcher.rs  integration_parser.rs  integration_realtime.rs  integration_test.rs  integration_tests.rs  parse_functions.rs  parser_coverage.rs  parser_errors.rs  parser_filters.rs  parser_from_sqllog.rs  parser_iterator.rs  parser_parallel.rs  performance_metrics.rs  performance_regression.rs  record.rs  record_parser.rs  sqllog_additional.rs
tests/fixtures/: patterns.txt
(+25 files in other folders)
