[package]
name = "dm-database-parser-sqllog"
version = "0.4.0"
edition = "2024"
authors = ["guangl"]
description = "一个高性能的达梦数据库 sqllog 日志解析库，提供零分配或低分配的记录切分与解析功能，支持实时监控"
license = "MIT"
repository = "https://github.com/guangl/dm-database-parser-sqllog"
documentation = "https://docs.rs/dm-database-parser-sqllog"
homepage = "https://github.com/guangl/dm-parser-sqllog"
keywords = ["sqllog", "parser", "dm-database"]
categories = ["parsing", "database", "text-processing"]
exclude = [
    "benches",
    "docs",
    "examples",
    "sqllogs",
    "target",
    "tests",
    ".github",
    "*.json",
    ".gitignore",
]

[lib]
name = "dm_database_parser_sqllog"
path = "src/lib.rs"

[dependencies]
rayon = "1.11.0"
memchr = "2.7.6"
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rusqlite = { version = "0.32", features = ["bundled"] }
