[package]
name = "dm-database-parser-sqllog"
version = "0.5.0"
edition = "2024"
authors = ["guangl"]
description = "一个高性能的达梦数据库 sqllog 日志解析库，提供零分配或低分配的记录切分与解析功能"
license = "MIT"
repository = "https://github.com/guangl/dm-database-parser-sqllog"
documentation = "https://docs.rs/dm-database-parser-sqllog"
homepage = "https://github.com/guangl/dm-parser-sqllog"
keywords = ["sqllog", "parser", "dm-database"]
categories = ["parsing", "database", "text-processing"]
exclude = [
    "benches",
    "docs",
    "examples",
    "sqllogs",
    "target",
    "tests",
    ".github",
    "*.json",
    ".gitignore",
]

[lib]
name = "dm_database_parser_sqllog"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
memchr = "2.7.6"
mimalloc = "0.1.48"
simdutf8 = "0.1.5"
smartstring = "1.0.1"
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "plotters"] }
tempfile = "3.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[[bench]]
name = "parser_benchmark"
harness = false
