[package]
name = "dm-database-parser-sqllog"
version = "1.1.0"
edition = "2024"
authors = ["guangl"]
description = "一个高性能的达梦数据库 sqllog 日志解析库，支持 LogParserBuilder 链式配置、过滤方法、直接字段访问和 FromSqllog trait"
license = "MIT"
repository = "https://github.com/guangl/dm-database-parser-sqllog"
documentation = "https://docs.rs/dm-database-parser-sqllog"
homepage = "https://github.com/guangl/dm-database-parser-sqllog"
keywords = ["sqllog", "parser", "dm-database", "dameng"]
categories = ["parsing", "database", "text-processing"]
exclude = [
    "benches",
    "docs",
    "examples",
    "sqllogs",
    "target",
    "tests",
    ".github",
    "*.json",
    ".gitignore",
]

[lib]
name = "dm_database_parser_sqllog"
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
atoi = "2.0.0"
fast-float = "0.2"
memchr = "2.7.6"
memmap2 = "0.9.9"
simdutf8 = "0.1.5"
thiserror = "2.0.17"
encoding = "0.2"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "plotters"] }
tempfile = "3.8"
rusqlite = { version = "0.32", features = ["bundled"] }
dhat = "0.3"
csv = "1.3"
mimalloc = "0.1.48"

[[bench]]
name = "parser_benchmark"
harness = false

